[package]
name = "interpreterbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
collection_macros = "0.2.0"
once_cell = "1.16.0"
phf = { version = "0.11.1", features = ["phf_macros", "macros"] }
pretty_assertions = "1.3.0"
